<resources>
    <string name="app_name">Mi primera app</string>
    <string name="login_application">Login_Application</string>
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="login">LOGIN</string>
    <string name="userinfo">Información del usuario:</string>
    <string name="fullname">Nombre completo:</string>
    <string name="edad">Edad:</string>
    <string name="telf">Teléfono:</string>
    <string name="volver">Volver</string>
    <string name="welcome">Bienvenido de nuevo, </string>
</resources>